src/frontend/acedemic-challenge/app/routes/calendar/components/MyCalendar/myCalendar.module.css
.myCalendar {
    padding: 1rem;

    width: 100%;

    color: white;
}

.changeViewButtonsContainer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-bottom: 0.5rem;
}

.calendarTitle {
    color: white;
    font-family: var(--font-family2), sans-serif;
    font-size: 1.25em;
    font-weight: bold;
    text-transform: uppercase;
}

.changeMonthButton {
    margin: 0 10px;
    padding: 0;

    border: none;
    outline: none;

    background-color: transparent;
    color: white;

    font-family: var(--font-family2), sans-serif;
    font-size: 1.25em;
    font-weight: bold;
    text-transform: uppercase;

    cursor: pointer;
}

.weekHeaderDayContainer {
    display: flex;
    justify-content: center;
    align-items: center;
}

.weekHeaderDayText {
    font-size: 100%;
    color: white;
    font-family: var(--font-family2), sans-serif;
    text-transform: uppercase;
}

.calendarGridContainer {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-auto-rows: 1fr;
    grid-gap: 0.35rem 0.25rem;
}

.calendarDayContainer {
    display: flex;
    justify-content: center;
    align-items: center;

    --edge-size: 0.3rem;
    background-color: var(--purple-dark);
}

.calendarDayText {
    font-size: 150%;
    color: white;
    font-family: var(--font-family2), sans-serif;
}

.calendarDayText.today {
    color: red;
}

.calendarDayText.notCurrentMonth {
    opacity: 0.35;
}

